--- a/MKStyle.css
+++ b/MKStyle.css
@@ -182,7 +182,7 @@ h4 {
 }
 #learnMoreBtn {
 		font-family: 'Lato';
-		font-size: 13px;
+		font-size: 0.8em;
 		font-weight: bold;
 		background-color: #393e41;	
 		color: white;
