--- a/MKStyle.css
+++ b/MKStyle.css
@@ -187,8 +187,7 @@ h4 {
 		background-color: #393e41;	
 		color: white;
 		border: solid 2px #393e41;
-		height: 3vw;
-		width: 14vw;
+		padding: 10px;
 		letter-spacing: 3px;
 		transition: all 0.6s;
 }
