--- a/MKStyle.css
+++ b/MKStyle.css
@@ -182,10 +182,10 @@ h4 {
 }
 #learnMoreBtn {
 		font-family: 'Lato';
-		font-size: 0.8em;
+		font-size: 1em;
 		font-weight: bold;
 		background-color: #393e41;	
-		color: white;
+		color: blue;
 		border: solid 2px #393e41;
 		padding: 10px;
 		letter-spacing: 3px;
