--- a/indexStyle.css
+++ b/indexStyle.css
@@ -19,7 +19,6 @@ body {
 }
 
 #logo {
-	-webkit-animation-delay: 2s;
 	-webkit-animation: logo 1s ease-in;
 }
 
@@ -32,6 +31,7 @@ body {
 	#logo {
 		padding-left: 2.5vw;
 		padding-top: 8vw;
+		width: 45vw;
 	}
 	#button {
 		padding-left: 6vw;
@@ -54,6 +54,7 @@ body {
 	#logo {
 		padding-left: 2vw;
 		padding-top: 3vw;
+		width: 30vw;
 	}
 	#button {
 		padding-left: 4vw;
