--- a/MKStyle.css
+++ b/MKStyle.css
@@ -236,7 +236,7 @@ h4 {
 }
 #littleText {
 	font-family: Lato;
-	font-size: 14px;
+	font-size: 1em;
 	letter-spacing: 2px;
 	font-weight: bold;
 	color: black;
@@ -252,23 +252,10 @@ h4 {
   background-color: black;
   background-size: cover;
   cursor: pointer;
-  margin-bottom: 60px;
+  margin-bottom: 2vw;
   box-shadow: 2px 2px 4px #a4a5a0;
 }
 
-@media only screen and (min-width: 500px) {
-	.newArrivals {
-		width: 170px;
-  		height: 170px;
-  	}
-}
-
-@media only screen and (min-width: 1000px) {
-	.newArrivals {
-		width: 165px;
-  		height: 165px;
-  	}
-}
 
 #nA1 { background: url("./img/naolingo.jpg");}
 #nA2 { background: url("./img/nazion.jpg");}
@@ -439,7 +426,7 @@ h4 {
 #calHead {
 	text-align: center;
 	font-family: Raleway;
-	font-size: 1.5em;
+	font-size: 1.7em;
 	font-weight: bold;
 	margin-top: 1em;
 }
@@ -456,9 +443,10 @@ h4 {
 #tentative {
 	text-align: center;
 	font-family: Raleway;
-	font-size: 1.2em;
+	font-size: 1.3em;
 	font-weight: bold;
 	margin-bottom: 20px;
+	letter-spacing: 2px;
 }
 
 /*SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--SHOP BOX CSS--*/	
@@ -577,7 +565,7 @@ h4 {
 }
 #littleCatText {
 	font-family: Lato;
-	font-size: 16px;
+	font-size: 1.2em;
 	letter-spacing: 2px;
 	font-weight: bold;
 	color: black;
