--- a/MKStyle.css
+++ b/MKStyle.css
@@ -56,28 +56,37 @@ h4 {
 	}
 }
 
+
 #topNavBar {
+	height: 30px;
 	background-color: #393e41;
 	text-align: center;
 	color: white;
-	padding-bottom: 3px;
+	min-width: 790px;
 }
 #topNavLeft {
 	text-align: left;
 }
 #topNavMid {
 	text-align: center;
+
 }
 #topNavRight {
 	text-align: right;
 }
-
+#mkBut {
+	font-size: 12px;
+	margin: 3px 25px;
+}
+#conBut {
+	margin: 3px 25px;
+}
 .topNavLinks {
-	margin: auto;
+	margin: 3px 35px;
 	background-color: #393e41;
 	color: white;
 	border: none;
-	font-size: 0.8em;
+	font-size: 12px;
 	letter-spacing: 4px;
 	font-family: Raleway;
 	border: solid 2px #393e41;
@@ -789,14 +798,12 @@ nav {
     width: 100%;
     z-index: 9999;
 }
-
 /*** INPUT ***/
 nav input {
     opacity: 0;
     position: absolute;
     z-index: -1;
 }
-
 /*** LABEL ***/
 nav label {
     cursor: pointer;
@@ -809,7 +816,6 @@ nav label {
     margin-top: 1em;
     margin-bottom: 0.8em;
 }
-
 /* Hamburger Icon */
 #menu-icon,
 #menu-icon:before,
@@ -820,50 +826,40 @@ nav label {
     transition: all 0.2s ease-in-out;
     width: 100%;
 }
-
 #menu-icon {
     display: inline-block;
     max-width: 1.5em;
     position: relative;
 
 }
-
 nav label #menu-icon {
     float: right;
 
 }
-
 #menu-icon:before,
 #menu-icon:after {
     content: '';
     left: 0;
     position: absolute;
 }
-
 #menu-icon:before {
     top: -0.4em;
 }
-
 #menu-icon:after {
     bottom: -0.4em;
 }
-
 /* Close Icon */
 nav input[type=checkbox]:checked + label #menu-icon {
     background: transparent;
 }
-
 nav input[type=checkbox]:checked + label #menu-icon:before {
     top: 0;
     transform: rotate(-45deg);
 }
-
 nav input[type=checkbox]:checked + label #menu-icon:after {
     bottom: 0;
     transform: rotate(45deg);
 }
-
-
 /*** MENU ***/
 /* Overlay */
 nav input:checked ~ #overlay {
@@ -877,7 +873,6 @@ nav input:checked ~ #overlay {
     width: 100vw;
     z-index: -1;
 }
-
 /* List */
 nav ul {
     font-size: 1.5em;
@@ -889,22 +884,18 @@ nav ul {
     padding: 0;
     text-align: center;
 }
-
 nav input:checked ~ ul {
     margin: 1em;
     max-height: inherit;
     opacity: 1;
 }
-
 nav ul > li {
     margin: 0.5em 0;
 }
-
 nav ul a {
     color: #1d1f20!important;
     text-decoration: none;
 }
-
 .mobileNavBtn {
 	background: none;
 	border: none;
@@ -913,7 +904,6 @@ nav ul a {
 	font-family: Raleway;
 	font-size: 2.5em;
 }
-
 /* Social Media */
 nav ul#social-media > li {
     display: inline-block;
