--- a/MKAboutStyle.css
+++ b/MKAboutStyle.css
@@ -307,8 +307,7 @@ h4 {
 }
 #matsP {
 	text-align: center;
-	margin-left: 40px;
-	margin-right: 40px;
+	width: 70%;
 }
 
 @media only screen and (min-width: 500px) {   
@@ -362,9 +361,9 @@ h4 {
 	padding-bottom: 70px;
 }
 #aboutEMCol {
-	border: solid 2px dimgrey;
-	padding-top: 20px;
-	margin-top: 30px;
+	border: solid 2px grey;
+	padding-top: 10px;
+	margin-top: 20px;
 	border-radius: 2px;
 	box-shadow: 2px 2px 8px #e1dad0;
 }
