--- a/MKShopStyle.css
+++ b/MKShopStyle.css
@@ -257,14 +257,38 @@ h5 {
 	background: none;
 	border:none;
 }
+#mobileInfoP {
+	font-family: Raleway;
+	font-size: 0.9em;
+	font-weight: bold;
+	letter-spacing: 1px;
+}
+@media only screen and (min-width: 500px) {
+	.shopItems {
+		width: 160px;
+  		height: 160px;
+  		margin: auto;
+	}
+	#mobileInfoP{
+		display: inline-block;
+	}
+}
+
+@media only screen and (min-width: 1000px) {
+	.shopItems {
+		width: 200px;
+  		height: 200px;
+  		margin: 40px;
+	}
+	#mobileInfoP{
+		display: none;
+	}
+}
 .shopItems {
-  width: 200px;
-  height: 200px;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  margin: auto;
   background-color: black;
   background-size: cover;
   cursor: pointer;
@@ -273,6 +297,7 @@ h5 {
   margin-top: 20px;
   margin-bottom: 40px;
 }
+
 .overlay {
   width: 100%;
   height: 100%;
